<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
   <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24.5dp"
        android:paddingBottom="14dp"
        android:text="@string/genx"
        />
    
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"/>

    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/edit_nombre"
        />

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:password="true"
        android:id="@+id/edit_password" />
    
    <Button
        android:id="@+id/button_acceder"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/acceder"
		android:onClick="acceder"
		 />
    
    <CheckBox
        android:id="@+id/check_recordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordar" />
    
</LinearLayout>